--- a/ask/qa/tmpl/base.html
+++ b/ask/qa/tmpl/base.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>{% block header %}{% endblock %}</h1>
 		{% block content %}{% endblock %}
+		{% block navigation %}{% endblock %}
 	</body>
 </html>
