Views bug fixes + sqlite-stub

--- a/ask/qa/tmpl/popular.html
+++ b/ask/qa/tmpl/popular.html
@@ -1,7 +1,7 @@
 {% extends "questions.html" %}
 
 {% block title %}
-	{{ block.super.super }} – popular
+	Q&A – popular
 {% endblock %}
 
 {% block header %}Popular Questions{% endblock %}
