--- a/ask/qa/tmpl/pages.html
+++ b/ask/qa/tmpl/pages.html
@@ -5,7 +5,7 @@
 		{% else %}
 		<li>
 		{% endif %}
-		<a href="{{ baseurl }}?page={{ p.number }}">{{ p }}</a>
+		<a href="{{ baseurl }}?page={{ p }}">{{ p }}</a>
 		</li>
 	{% endfor %}
 </ul></nav>
